Added analysis notebook

--- a/settings.ini
+++ b/settings.ini
@@ -46,6 +46,7 @@ requirements = pandas
                matplotlib
                fastcore
                fastai
+	       holidays
 dev_requirements = seaborn
                    jupyterlab
                    ipython
